<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TestAppMaxpay</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basket">Basket</string>
    <string name="main_screen">Main screen</string>
    <string name="shop">Shop</string>
    <string name="price_with_currency">%d ₴</string>
    <string name="cart_menu_with_number">cart(%d)</string>
    <string name="settings">Settings</string>
    <string name="transaction">Transaction</string>
    <string name="theme">Theme</string>
    <string name="currency">Currency</string>
    <string name="change">Change</string>
    <string name="choose_currency">Select available currency</string>
    <string name="cart_empty">Your cart is empty</string>
    <string name="order_id">Order id: 160404021323</string>
    <string name="total_amount">Total amount:</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="pay">Pay</string>
    <string name="edit_customer_data">Edit customer data</string>
    <string name="simple_form">Simple form</string>
    <string name="undefined_error" tools:ignore="ExtraTranslation">Undefined error</string>
    <string name="error_undef">Undef erro</string>
    <string name="publicKey" tools:ignore="ExtraTranslation">Public key</string>



</resources>