<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvOrderId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="15dp"
        android:text="@string/order_id"
        android:textColor="@color/colorDarkText"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline9" />

    <TextView
        android:id="@+id/tvTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="15dp"
        android:text="@string/total_amount"
        android:textColor="@color/colorDarkText"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOrderId" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="100 USD"
        android:textColor="@color/colorDarkText"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constrainedHeight="true"
        app:layout_constraintStart_toEndOf="@id/tvTA"
        app:layout_constraintTop_toBottomOf="@id/tvOrderId" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilFirstName"
        style="@style/AppInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalAmount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassportNumber"
            style="@style/AppInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilLastName"
        style="@style/AppInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilFirstName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassportNumber1"
            style="@style/AppInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilPhone"
        style="@style/AppInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilLastName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassportNumber2"
            style="@style/AppInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilCountry"
        style="@style/AppInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilPhone">

        <com.maxpay.sdk.ui.view.input.MaskEditText
            android:id="@+id/etPassportNumber3"
            style="@style/AppInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            app:edit_text_mask="@string/mask_cvc" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilCity"
        style="@style/AppInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/city"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilCountry">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassportNumber4"
            style="@style/AppInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilAddr"
        style="@style/AppInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilCity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassportNumber5"
            style="@style/AppInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ilZip"
        style="@style/AppInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/zip"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilAddr">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassportNumber6"
            style="@style/AppInputEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="@string/pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ilZip" />


    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_simple_toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/height_toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>