<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTransaction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="15dp"
        android:textColor="@color/colorDarkText"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline8"
        android:text="@string/transaction" />

    <segmented_control.widget.custom.android.com.segmentedcontrol.SegmentedControl
        android:id="@+id/segmentControlTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        app:columnCount="4"
        app:distributeEvenly="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTransaction"
        app:radius="12dp"
        app:segments="@array/payment_types"
        app:selectedBackgroundColor="@color/colorPrimary"
        app:textVerticalPadding="6dp"
        app:unSelectedStrokeColor="@color/colorPrimaryDark"
        app:unSelectedTextColor="@color/colorDarkText" />
        <EditText
            android:id="@+id/ilTotalAmount"
            style="@style/AppInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/total_amount"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/segmentControlTransaction"/>


    <!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/ilTotalAmount"-->
<!--        style="@style/AppInputLayoutStyle"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/total_amount"-->
<!--        android:layout_marginTop="@dimen/margin_medium"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/segmentControlTransaction">-->
<!---->
<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/etPassportNumber"-->
<!--            style="@style/AppInputEditText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:inputType="numberDecimal" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <TextView
        android:id="@+id/tvCur"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="15dp"
        android:textColor="@color/colorDarkText"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ilTotalAmount"
        android:text="@string/currency" />

    <TextView
        android:id="@+id/tvCurrency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="15dp"
        android:textColor="@color/colorDarkText"
        android:textSize="@dimen/text_size_medium"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCur"
        android:text="USD" />

    <TextView
        android:id="@+id/tvChange"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="15dp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_medium"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCur"
        android:text="@string/change" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switcherEditCustomerData"
        style="@style/ColorSwitchStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_customer_data"
        android:shadowColor="@color/colorPrimary"
        android:outlineAmbientShadowColor="@color/colorPrimary"
        android:outlineSpotShadowColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/tvCurrency"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPay"
        style="@style/AppBorderButtonViolet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:text="Pay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switcherEditCustomerData" />


    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_simple_toolbar1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/height_toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>